<resources>
    <string name="app_name">Mystery1</string>

    //drawer view
    <string name="video">Videos</string>
    <string name="document">Documents</string>
    <string name="navigation_drawer_open">nav open</string>
    <string name="navigation_drawer_close">nav close</string>
    <string name="mainscreen_empty_note">empty</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    //document
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="imgUrl">imgUrl</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="no_bookmark_here">No bookmark here</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="document_hint">Documents...</string>
</resources>