<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mystery1.view.activity.ui.home.HomeFragment"
        android:label="@string/video"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mystery1.view.fragment.DocumentsFragment"
        android:label="@string/document"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mystery1.view.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>